# lib-rad

./: .gitignore  README.md  conftest.py  demo.ipynb  pyproject.toml  setup.py
hooks/: pre-commit
notebooks/: demo.ipynb
rad/: __init__.py  base.py  config.py  detections.py  processor.py  radar.py  streamer.py  urad.py
rad/config/: 1443config.cfg  1443config_higher_cfar.cfg  chirp_config.cfg  chirp_config_temperature.cfg  jsonconfig.cfg  newcfg.cfg
rad/display/: __init__.py  simple_gui.py
rad/interfaces/: __init__.py  base.py  urad.py
tests/: test_detections.py
tests/display/: test_simple_gui.py
tests/interfaces/: test_urad_interface.py
